@@ -1,3 +1,10 @@
+2007-05-09  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-style.c: make sure that appearance.h (and thereby config.h)
+	is included first; constify strings
+
+	* gnome-wp-xml.c: (gnome_wp_xml_load_xml): fix leak
+
 2007-05-08  Denis Washington  <denisw@svn.nome.org>
 
 	* appearance.glade:
